src/components/NavBar/style.scss
@import "theme/colors.scss";

button:hover {
  cursor: pointer;
}

.navBar {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 65px;
  direction: ltr;

  box {
    background: $main-white;
    border: 2px solid $main-green;
    box-sizing: border-box;
    border-radius: 6px;
    margin-top: auto;
    margin-bottom: auto;
  }

  .changeLanguage {
    @extend box;
    width: 65px;
    height: 45px;
    margin: auto 10px;

    .select {
      background: none;
      border-style: none;
      outline: 0;
      width: 100%;
      height: 100%;
    }
  }

  .signUp {
    @extend box;
    width: 140px;
    height: 45px;
  }

  .login {
    width: 10vw;
    height: 45px;
    margin: auto 1vw;
    display: flex;
    justify-content: space-around;
  }

  button:focus {
    outline: 0;
  }

  button {
    background: none;
    border: none;
    // padding: 1rem;
    margin-right: 1rem;
    margin-left: 0.7rem;
  }

  .home-btn {}
}

